istio/istio-easytrade.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: easytrade-gateway
  namespace: easytrade
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: easytrade-httproute
  namespace: easytrade
spec:
  hosts:
    - "*"
  gateways:
    - easytrade-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: frontendreverseproxy-easytrade
